--- a/compiler/file_role_rules/BUILD.bazel
+++ b/compiler/file_role_rules/BUILD.bazel
@@ -4,7 +4,7 @@ load("//tools/bazel/macros:rust.bzl", "rust_library")
 rust_library(
     name = "file_role_rules",
     srcs = ["lib.rs"],
-    visibility = ["//visibility:public"],
+    visibility = ["//:__subpackages__"],
     deps = [
         "//compiler/diagnostics",
         "//compiler/phase_results",
