--- a/compiler/phase_results/BUILD.bazel
+++ b/compiler/phase_results/BUILD.bazel
@@ -4,7 +4,7 @@ load("//tools/bazel/macros:rust.bzl", "rust_library")
 rust_library(
     name = "phase_results",
     srcs = ["lib.rs"],
-    visibility = ["//visibility:public"],
+    visibility = ["//:__subpackages__"],
     deps = ["//compiler/diagnostics"],
 )
 
