--- a/compiler/semantic_lowering/BUILD.bazel
+++ b/compiler/semantic_lowering/BUILD.bazel
@@ -4,7 +4,7 @@ load("//tools/bazel/macros:rust.bzl", "rust_library")
 rust_library(
     name = "semantic_lowering",
     srcs = ["lib.rs"],
-    visibility = ["//visibility:public"],
+    visibility = ["//:__subpackages__"],
     deps = [
         "//compiler/phase_results",
         "//compiler/semantic_program",
