--- a/buildbuddy.yaml
+++ b/buildbuddy.yaml
@@ -9,8 +9,9 @@ actions:
             branches:
                 - "*"
       steps:
-        - run: bazel run //:gazelle
-        - run: bazel run //:format
+        - run: bazel mod deps --lockfile_mode=error
+        - run: bazel run //:gazelle -- -mode=diff
+        - run: bazel run //:format -- check
         - run: bazel build //...
         - run: bazel test //...
         - run: bazel run --run_in_cwd @multitool//tools/typos
