--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,4 +45,5 @@ pedantic = { level = "warn", priority = -1 }
 doc_markdown = "allow"
 missing_errors_doc = "allow"
 missing_panics_doc = "allow"
+too_many_arguments = "allow"
 too_many_lines = "allow"
