--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ path = "placeholder.rs"
 
 [dependencies]
 # keep-sorted start
+axum = { version = "^0.8.6" }
 clap = { version = "^4.5.59", features = ["derive"] }
 cranelift-codegen = { version = "^0.125.3" }
 cranelift-frontend = { version = "^0.125.3" }
@@ -19,6 +20,7 @@ globset = { version = "^0.4.18" }
 serde = { version = "^1.0.228", features = ["derive"] }
 serde_json = { version = "^1.0.149" }
 syn = { version = "^2.0.116", features = ["full", "parsing", "visit"] }
+tokio = { version = "^1.48.0", features = ["fs", "macros", "net", "process", "rt-multi-thread", "time"] }
 # keep-sorted end
 
 [lints.rust]
