--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -5,6 +5,7 @@ bazel_dep(name = "rules_go", version = "0.60.0")
 bazel_dep(name = "protobuf", version = "33.5")
 bazel_dep(name = "toolchains_llvm_bootstrapped", version = "0.5.8")
 bazel_dep(name = "gazelle", version = "0.47.0")
+bazel_dep(name = "rules_pkg", version = "1.2.0")
 
 register_toolchains(
     "@toolchains_llvm_bootstrapped//toolchain:all",
