--- a/playground/web/BUILD.bazel
+++ b/playground/web/BUILD.bazel
@@ -1,5 +1,8 @@
 filegroup(
     name = "web_assets",
-    srcs = glob(["*"]),
+    srcs = glob(
+        ["*"],
+        exclude = ["BUILD.bazel"],
+    ),
     visibility = ["//:__subpackages__"],
 )
