--- a/.github/workflows/renovate.yaml
+++ b/.github/workflows/renovate.yaml
@@ -3,7 +3,7 @@ on:
     workflow_dispatch:
 env:
     # renovate: datasource=docker depName=ghcr.io/renovatebot/renovate
-    RENOVATE_VERSION: '43.24.2'
+    RENOVATE_VERSION: "43.24.2"
 jobs:
     renovate:
         runs-on: ubuntu-latest
@@ -14,17 +14,17 @@ jobs:
         steps:
             - uses: actions/checkout@v6
               with:
-                token: ${{ secrets.RENOVATE_TOKEN }}
+                  token: ${{ secrets.RENOVATE_TOKEN }}
             - name: Run Renovate
               uses: renovatebot/github-action@v46.1.1
               env:
-                LOG_LEVEL: debug
-                RENOVATE_REPOSITORIES: ${{ github.repository }}
-                RENOVATE_BASE_BRANCH: ${{ github.ref_name }}
-                RENOVATE_ONBOARDING: "false"
-                RENOVATE_TOKEN: ${{ secrets.RENOVATE_TOKEN }}
-                RENOVATE_ALLOWED_COMMANDS: .*
-                RENOVATE_CONFIG_VALIDATION_ERROR: true
+                  LOG_LEVEL: debug
+                  RENOVATE_REPOSITORIES: ${{ github.repository }}
+                  RENOVATE_BASE_BRANCH: ${{ github.ref_name }}
+                  RENOVATE_ONBOARDING: "false"
+                  RENOVATE_TOKEN: ${{ secrets.RENOVATE_TOKEN }}
+                  RENOVATE_ALLOWED_COMMANDS: .*
+                  RENOVATE_CONFIG_VALIDATION_ERROR: true
               with:
-                renovate-version: ${{ env.RENOVATE_VERSION }}
-                docker-cmd-file: .github/renovate_entrypoint.sh
+                  renovate-version: ${{ env.RENOVATE_VERSION }}
+                  docker-cmd-file: .github/renovate_entrypoint.sh
