try push to docr

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -7,6 +7,7 @@ bazel_dep(name = "toolchains_llvm_bootstrapped", version = "0.5.8")
 bazel_dep(name = "gazelle", version = "0.47.0")
 bazel_dep(name = "rules_pkg", version = "1.2.0")
 bazel_dep(name = "rules_oci", version = "2.2.7")
+bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
 
 register_toolchains(
     "@toolchains_llvm_bootstrapped//toolchain:all",
