--- a/buildbuddy.yaml
+++ b/buildbuddy.yaml
@@ -29,8 +29,8 @@ actions:
                 printf '{"auths":{"registry.digitalocean.com":{"auth":"%s"}}}\n' "$AUTH" > "${DOCKER_CONFIG}/config.json"
           - run: |
                 set -euo pipefail
-                if [[ "${GIT_PR_NUMBER:-0}" -gt 0 ]]; then
-                  exit 0
-                fi
+                # if [[ "${GIT_PR_NUMBER:-0}" -gt 0 ]]; then
+                #   exit 0
+                # fi
                 export DOCKER_CONFIG="${HOME}/.docker"
                 bazel run --stamp --platforms=@toolchains_llvm_bootstrapped//platforms:linux_amd64 //playground:playground_push
