--- a/tests/executable_end_to_end/BUILD.bazel
+++ b/tests/executable_end_to_end/BUILD.bazel
@@ -6,5 +6,8 @@ rust_test(
     data = [
         "//compiler/cli:main",
     ] + glob(["**"]),
-    deps = ["@rules_rust//tools/runfiles"],
+    deps = [
+        "//tests/snapshot_fixture_helpers",
+        "@rules_rust//tools/runfiles",
+    ],
 )
