--- a/compiler/rust_backend/BUILD.bazel
+++ b/compiler/rust_backend/BUILD.bazel
@@ -24,6 +24,7 @@ rust_library(
 dependency_enforcement_test(
     name = "rust_backend_forbidden_dependencies",
     forbidden = [
+        "//compiler/cranelift_backend",
         "//compiler/binding",
         "//compiler/diagnostics",
         "//compiler/driver",
