--- a/compiler/parsing/BUILD.bazel
+++ b/compiler/parsing/BUILD.bazel
@@ -27,6 +27,7 @@ rust_library(
 dependency_enforcement_test(
     name = "parsing_forbidden_dependencies",
     forbidden = [
+        "//compiler/cranelift_backend",
         "//compiler/binding",
         "//compiler/driver",
         "//compiler/exports",
