--- a/compiler/phase_results/BUILD.bazel
+++ b/compiler/phase_results/BUILD.bazel
@@ -11,6 +11,7 @@ rust_library(
 dependency_enforcement_test(
     name = "phase_results_forbidden_dependencies",
     forbidden = [
+        "//compiler/cranelift_backend",
         "//compiler/binding",
         "//compiler/driver",
         "//compiler/exports",
