--- a/compiler/resolution/BUILD.bazel
+++ b/compiler/resolution/BUILD.bazel
@@ -20,6 +20,7 @@ rust_library(
 dependency_enforcement_test(
     name = "resolution_forbidden_dependencies",
     forbidden = [
+        "//compiler/cranelift_backend",
         "//compiler/driver",
         "//compiler/file_role_rules",
         "//compiler/package_symbols",
