--- a/compiler/semantic_types/BUILD.bazel
+++ b/compiler/semantic_types/BUILD.bazel
@@ -14,6 +14,7 @@ rust_library(
 dependency_enforcement_test(
     name = "semantic_types_forbidden_dependencies",
     forbidden = [
+        "//compiler/cranelift_backend",
         "//compiler/binding",
         "//compiler/diagnostics",
         "//compiler/driver",
