--- a/compiler/source/BUILD.bazel
+++ b/compiler/source/BUILD.bazel
@@ -16,6 +16,7 @@ rust_library(
 dependency_enforcement_test(
     name = "source_forbidden_dependencies",
     forbidden = [
+        "//compiler/cranelift_backend",
         "//compiler/binding",
         "//compiler/diagnostics",
         "//compiler/driver",
