--- a/compiler/executable_program/BUILD.bazel
+++ b/compiler/executable_program/BUILD.bazel
@@ -5,6 +5,7 @@ rust_library(
     name = "executable_program",
     srcs = ["lib.rs"],
     visibility = ["//:__subpackages__"],
+    deps = ["@crates//:serde"],
 )
 
 dependency_enforcement_test(
@@ -13,6 +14,7 @@ dependency_enforcement_test(
         "//compiler/binding",
         "//compiler/diagnostics",
         "//compiler/driver",
+        "//compiler/cranelift_backend",
         "//compiler/executable_lowering",
         "//compiler/exports",
         "//compiler/file_role_rules",
@@ -23,7 +25,6 @@ dependency_enforcement_test(
         "//compiler/phase_results",
         "//compiler/reports",
         "//compiler/resolution",
-        "//compiler/rust_backend",
         "//compiler/semantic_lowering",
         "//compiler/semantic_program",
         "//compiler/semantic_types",
