--- a/buildbuddy.yaml
+++ b/buildbuddy.yaml
@@ -1,8 +1,6 @@
 actions:
     - name: CI
       container_image: "ubuntu-24.04"
-      env:
-          DOCKER_CONFIG: "/home/buildbuddy/.docker"
       triggers:
           push:
               branches:
@@ -18,10 +16,19 @@ actions:
           - run: bazel test //...
           - run: bazel run --run_in_cwd @multitool//tools/typos
           - run: bazel run //tools/filename_linter:main
-          - run: bazel run //playground/deploy:configure_docr_auth
+
+    - name: Deploy Playground
+      container_image: "ubuntu-24.04"
+      env:
+          DOCKER_CONFIG: "/home/buildbuddy/.docker"
+      steps:
+          - run: |
+                : "${DOCR_TOKEN:?DOCR_TOKEN must be set}"
+                mkdir -p "${DOCKER_CONFIG}"
+                auth="$(printf "doctl:%s" "${DOCR_TOKEN}" | base64 -w 0 2>/dev/null || printf "doctl:%s" "${DOCR_TOKEN}" | base64)"
+                printf '{"auths":{"registry.digitalocean.com":{"auth":"%s"}}}\n' "${auth}" >"${DOCKER_CONFIG}/config.json"
           - run: |
                 bazel run \
                   --stamp \
-                  --define=push_deploy=true \
                   --platforms=@toolchains_llvm_bootstrapped//platforms:linux_amd64 \
                   //playground:playground_push
