--- a/playground/web/BUILD.bazel
+++ b/playground/web/BUILD.bazel
@@ -1,8 +1,11 @@
-filegroup(
+load("@aspect_bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")
+
+copy_to_directory(
     name = "web_assets",
     srcs = glob(
         ["*"],
         exclude = ["BUILD.bazel"],
-    ),
+    ) + ["@monaco_editor//:assets"],
+    include_external_repositories = ["*"],
     visibility = ["//:__subpackages__"],
 )
