--- a/playground/api/BUILD.bazel
+++ b/playground/api/BUILD.bazel
@@ -6,6 +6,7 @@ rust_library(
         "compiler_adapter.rs",
         "lib.rs",
         "models.rs",
+        "path_sanitizer.rs",
         "routes.rs",
         "session_store.rs",
     ],
