--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,9 @@ axum = { version = "^0.8.8" }
 clap = { version = "^4.5.60", features = ["derive"] }
 cranelift-codegen = { version = "^0.128.3" }
 cranelift-frontend = { version = "^0.128.3" }
-cranelift-jit = { version = "^0.128.3" }
 cranelift-module = { version = "^0.128.3" }
+cranelift-native = { version = "^0.128.3" }
+cranelift-object = { version = "^0.128.3" }
 globset = { version = "^0.4.18" }
 serde = { version = "^1.0.228", features = ["derive"] }
 serde_json = { version = "^1.0.149" }
