--- a/.bazelrc
+++ b/.bazelrc
@@ -26,3 +26,14 @@ common --workspace_status_command=tools/bazel/workspace_status.sh
 
 # rules_oci push actions read registry auth from DOCKER_CONFIG.
 common --action_env=DOCKER_CONFIG
+
+common --remote_cache=grpcs://remote.buildbuddy.io
+common --bes_backend=grpcs://remote.buildbuddy.io
+common --remote_download_outputs=minimal
+# Keep local runs from using remote cache by default.
+common --remote_accept_cached=false
+common --remote_upload_local_results=false
+common:remote --remote_executor=grpcs://remote.buildbuddy.io
+common:remote --remote_accept_cached=true
+common:remote --remote_upload_local_results=true
+common:remote --remote_header=x-buildbuddy-api-key=${BUILDBUDDY_API_KEY}
