--- a/.envrc
+++ b/.envrc
@@ -1,1 +1,5 @@
 PATH_add bin
+dotenv_if_exists .env.local
+
+export AWS_ACCESS_KEY_ID="${AWS_ACCESS_KEY_ID:-$SPACES_ACCESS_KEY_ID}"
+export AWS_SECRET_ACCESS_KEY="${AWS_SECRET_ACCESS_KEY:-$SPACES_SECRET_ACCESS_KEY}"
