--- a/.envrc
+++ b/.envrc
@@ -4,3 +4,4 @@ dotenv_if_exists .env.local
 export AWS_ACCESS_KEY_ID="${AWS_ACCESS_KEY_ID:-$SPACES_ACCESS_KEY_ID}"
 export AWS_SECRET_ACCESS_KEY="${AWS_SECRET_ACCESS_KEY:-$SPACES_SECRET_ACCESS_KEY}"
 export TF_VAR_buildbuddy_api_key="${BUILDBUDDY_API_KEY:-}"
+export TF_VAR_docr_push_token="${DOCR_PUSH_TOKEN:-}"
