Tweak bazel config for CI runner

--- a/.buildkite/.bazelrc
+++ b/.buildkite/.bazelrc
@@ -1,3 +1,6 @@
+startup --max_idle_secs=0
+startup --host_jvm_args=-Xmx1500m
+
 common --remote_cache=grpcs://remote.buildbuddy.io
 common --bes_backend=grpcs://remote.buildbuddy.io
 common --remote_accept_cached=true
